twenty-seventh step to new crm