@@ -1,5 +1,6 @@
 package org.example.clientservice.services.client;
 
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.poi.ss.usermodel.Row;
@@ -8,12 +9,19 @@ import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.example.clientservice.exceptions.client.ClientException;
 import org.example.clientservice.models.client.Client;
+import org.example.clientservice.models.client.ClientFilterIds;
 import org.example.clientservice.models.clienttype.ClientFieldValue;
+import org.example.clientservice.models.clienttype.ClientType;
 import org.example.clientservice.models.clienttype.ClientTypeField;
+import org.example.clientservice.models.dto.client.ClientExportResult;
+import org.example.clientservice.models.dto.clienttype.FieldIdsRequest;
 import org.example.clientservice.models.field.Source;
-import org.example.clientservice.services.impl.*;
+import org.example.clientservice.services.impl.IClientSpecialOperationsService;
+import org.example.clientservice.services.impl.ISourceService;
 import org.example.clientservice.services.clienttype.ClientTypeFieldService;
+import org.example.clientservice.services.clienttype.ClientTypeService;
 import org.example.clientservice.spec.ClientSpecification;
+import org.example.clientservice.utils.FilenameUtils;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
@@ -25,8 +33,9 @@ import jakarta.persistence.criteria.*;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -38,147 +47,199 @@ public class ClientSpecialOperationsService implements IClientSpecialOperationsS
 
     private static final Set<String> VALID_STATIC_FIELDS = Set.of(
             "id", "company", "createdAt", "updatedAt", "source");
+    private static final DateTimeFormatter FILENAME_DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss");
+    private static final String DEFAULT_CLIENT_TYPE_NAME = "клієнти";
+    private static final String FILENAME_TEMPLATE = "клієнти_%s_%s.xlsx";
+    private static final int MAX_QUERY_LENGTH = 255;
+    private static final String FIELD_PREFIX = "field_";
+    private static final int FIELD_PREFIX_LENGTH = 6;
+    private static final String FILTER_KEY_CLIENT_TYPE_ID = "clientTypeId";
+    private static final String BOOLEAN_TRUE_UA = "Так";
+    private static final String BOOLEAN_FALSE_UA = "Ні";
+    private static final String EMPTY_STRING = "";
 
     private final ISourceService sourceService;
     private final ClientTypeFieldService clientTypeFieldService;
+    private final ClientTypeService clientTypeService;
 
     @Override
     @Transactional(readOnly = true)
-    public byte[] generateExcelFile(
+    @NonNull
+    public ClientExportResult exportClientsToExcel(
             Sort.Direction sortDirection,
             String sortProperty,
             String query,
             Map<String, List<String>> filterParams,
-            List<String> selectedFields
+            @NonNull List<String> selectedFields
     ) {
-        validateInputs(query, filterParams, selectedFields);
+        log.info("Starting export to Excel with {} fields", selectedFields.size());
+        
+        validateInputs(query, selectedFields);
 
         Sort sort = createSort(sortDirection, sortProperty);
-        FilterIds filterIds;
-        if (query != null && !query.trim().isEmpty()) {
-            filterIds = fetchFilterIds(query);
-        } else {
-            List<Source> allSources = sourceService.getAllSources();
-            filterIds = new FilterIds(allSources, List.of());
-        }
+        ClientFilterIds filterIds = buildFilterIds(query);
 
         List<Client> clientList = fetchClients(query, filterParams, filterIds, sort);
 
         Workbook workbook = generateWorkbook(clientList, selectedFields, filterIds);
 
-        return convertWorkbookToBytes(workbook);
+        byte[] excelData = convertWorkbookToBytes(workbook);
+        String filename = generateFilename(filterParams);
+
+        log.info("Successfully exported {} clients to Excel", clientList.size());
+        return new ClientExportResult(excelData, filename);
     }
 
-    private void validateInputs(String query, Map<String, List<String>> filterParams, List<String> selectedFields) {
-        if (query != null && query.length() > 255) {
-            throw new ClientException("INVALID_QUERY", "Search query cannot exceed 255 characters");
+    private void validateInputs(String query, @NonNull List<String> selectedFields) {
+        validateQuery(query);
+        validateSelectedFields(selectedFields);
+    }
+
+    private void validateQuery(String query) {
+        if (query != null && query.length() > MAX_QUERY_LENGTH) {
+            throw new ClientException("INVALID_QUERY", 
+                    String.format("Search query cannot exceed %d characters", MAX_QUERY_LENGTH));
         }
-        if (filterParams != null) {
-            // Валидация ключей фильтров:
-            // - Стандартные ключи (createdAtFrom, createdAtTo, updatedAtFrom, updatedAtTo, source, showInactive, clientTypeId)
-            // - Диапазоны (ключи, заканчивающиеся на From/To)
-            // - Динамические поля (обрабатываются в ClientSpecification)
-            // Все остальные ключи будут проигнорированы в ClientSpecification
-        }
-        if (selectedFields == null || selectedFields.isEmpty()) {
+    }
+
+    private void validateSelectedFields(@NonNull List<String> selectedFields) {
+        if (selectedFields.isEmpty()) {
             throw new ClientException("INVALID_FIELDS", "The list of fields for export cannot be empty");
         }
         
-        List<Long> fieldIds = selectedFields.stream()
-                .filter(field -> field.startsWith("field_"))
-                .map(field -> {
-                    try {
-                        return Long.parseLong(field.substring(6));
-                    } catch (NumberFormatException e) {
-                        return null;
-                    }
-                })
+        List<Long> fieldIds = extractFieldIds(selectedFields);
+        Map<Long, ClientTypeField> fieldMap = loadFieldMap(fieldIds);
+        
+        validateFieldNames(selectedFields, fieldMap);
+    }
+
+    private List<Long> extractFieldIds(@NonNull List<String> selectedFields) {
+        return selectedFields.stream()
+                .filter(field -> field.startsWith(FIELD_PREFIX))
+                .map(this::parseFieldId)
                 .filter(Objects::nonNull)
                 .distinct()
                 .collect(Collectors.toList());
-        
-        Map<Long, ClientTypeField> fieldMap = new HashMap<>();
-        if (!fieldIds.isEmpty()) {
-            fieldMap = clientTypeFieldService.getFieldsByIds(fieldIds).stream()
-                    .collect(Collectors.toMap(ClientTypeField::getId, field -> field));
+    }
+
+    private Long parseFieldId(@NonNull String field) {
+        try {
+            return Long.parseLong(field.substring(FIELD_PREFIX_LENGTH));
+        } catch (NumberFormatException | StringIndexOutOfBoundsException e) {
+            return null;
+        }
+    }
+
+    private Map<Long, ClientTypeField> loadFieldMap(@NonNull List<Long> fieldIds) {
+        if (fieldIds.isEmpty()) {
+            return Collections.emptyMap();
         }
         
+        FieldIdsRequest request = new FieldIdsRequest(fieldIds);
+        return clientTypeFieldService.getFieldsByIds(request).stream()
+                .collect(Collectors.toMap(ClientTypeField::getId, field -> field));
+    }
+
+    private void validateFieldNames(@NonNull List<String> selectedFields, @NonNull Map<Long, ClientTypeField> fieldMap) {
         for (String field : selectedFields) {
-            if (!VALID_STATIC_FIELDS.contains(field) && !field.startsWith("field_")) {
-                throw new ClientException("INVALID_FIELDS", String.format("Invalid field specified for export: %s", field));
+            if (!VALID_STATIC_FIELDS.contains(field) && !field.startsWith(FIELD_PREFIX)) {
+                throw new ClientException("INVALID_FIELDS", 
+                        String.format("Invalid field specified for export: %s", field));
             }
-            if (field.startsWith("field_")) {
-                try {
-                    Long fieldId = Long.parseLong(field.substring(6));
-                    if (!fieldMap.containsKey(fieldId)) {
-                        throw new ClientException("INVALID_FIELDS", String.format("Dynamic field not found: %s", field));
-                    }
-                } catch (NumberFormatException e) {
-                    throw new ClientException("INVALID_FIELDS", String.format("Invalid field ID format: %s", field));
-                }
+            if (field.startsWith(FIELD_PREFIX)) {
+                validateDynamicField(field, fieldMap);
             }
         }
     }
 
-    private record FilterIds(
-            List<Source> sourceDTOs, List<Long> sourceIds
-    ) {
+    private void validateDynamicField(@NonNull String field, @NonNull Map<Long, ClientTypeField> fieldMap) {
+        Long fieldId = parseFieldId(field);
+        if (fieldId == null) {
+            throw new ClientException("INVALID_FIELDS", 
+                    String.format("Invalid field ID format: %s", field));
+        }
+        if (!fieldMap.containsKey(fieldId)) {
+            throw new ClientException("INVALID_FIELDS", 
+                    String.format("Dynamic field not found: %s", field));
+        }
     }
 
     private Sort createSort(Sort.Direction sortDirection, String sortProperty) {
         return Sort.by(sortDirection, sortProperty);
     }
 
-    private FilterIds fetchFilterIds(String query) {
-        List<Source> sourceDTOs = sourceService.findByNameContaining(query);
-        List<Long> sourceIds = sourceDTOs.stream().map(Source::getId).toList();
-
-        return new FilterIds(sourceDTOs, sourceIds);
+    private ClientFilterIds buildFilterIds(String query) {
+        String normalizedQuery = normalizeQuery(query);
+        
+        if (normalizedQuery != null) {
+            return fetchFilterIds(normalizedQuery);
+        }
+        
+        return new ClientFilterIds(Collections.emptyList(), Collections.emptyList());
     }
 
+    private String normalizeQuery(String query) {
+        if (query == null) {
+            return null;
+        }
+        String trimmed = query.trim();
+        if (trimmed.isEmpty() || "null".equalsIgnoreCase(trimmed)) {
+            return null;
+        }
+        return trimmed;
+    }
 
-    private List<Client> fetchClients(String query, Map<String, List<String>> filterParams, FilterIds filterIds,
-                                      Sort sort) {
-        String normalizedQuery = null;
-        if (query != null) {
-            String trimmed = query.trim();
-            if (!trimmed.isEmpty() && !"null".equalsIgnoreCase(trimmed)) {
-                normalizedQuery = query;
-            }
+    private ClientFilterIds fetchFilterIds(@NonNull String query) {
+        List<Source> sourceDTOs = sourceService.findByNameContaining(query);
+        List<Long> sourceIds = sourceDTOs.stream()
+                .map(Source::getId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        return new ClientFilterIds(sourceDTOs, sourceIds);
+    }
+
+    private List<Client> fetchClients(String query, Map<String, List<String>> filterParams, 
+                                     ClientFilterIds filterIds, @NonNull Sort sort) {
+        String normalizedQuery = normalizeQuery(query);
+        Long clientTypeId = extractClientTypeId(filterParams);
+        List<Long> sourceIdsForSpec = normalizedQuery != null ? filterIds.sourceIds() : null;
+        
+        Specification<Client> spec = createClientSpecification(normalizedQuery, filterParams, 
+                sourceIdsForSpec, clientTypeId);
+        
+        return executeClientQuery(spec, sort);
+    }
+
+    private Long extractClientTypeId(Map<String, List<String>> filterParams) {
+        if (filterParams == null || !filterParams.containsKey(FILTER_KEY_CLIENT_TYPE_ID)) {
+            return null;
         }
         
-        Long clientTypeId = null;
-        if (filterParams != null && filterParams.containsKey("clientTypeId")) {
-            List<String> clientTypeIdList = filterParams.get("clientTypeId");
-            if (clientTypeIdList != null && !clientTypeIdList.isEmpty()) {
-                try {
-                    clientTypeId = Long.parseLong(clientTypeIdList.get(0));
-                } catch (NumberFormatException e) {
-                }
-            }
+        List<String> clientTypeIdList = filterParams.get(FILTER_KEY_CLIENT_TYPE_ID);
+        if (clientTypeIdList == null || clientTypeIdList.isEmpty()) {
+            return null;
         }
-
-        List<Long> sourceIdsForSpec = (normalizedQuery != null && !normalizedQuery.trim().isEmpty()) 
-            ? filterIds.sourceIds() 
-            : null;
         
-        Specification<Client> spec = new ClientSpecification(
-                normalizedQuery,
-                filterParams,
-                sourceIdsForSpec,
-                clientTypeId
-        );
+        try {
+            return Long.parseLong(clientTypeIdList.getFirst());
+        } catch (NumberFormatException e) {
+            log.warn("Invalid clientTypeId format: {}", clientTypeIdList.getFirst());
+            return null;
+        }
+    }
 
+    private Specification<Client> createClientSpecification(String query, Map<String, List<String>> filterParams,
+                                                           List<Long> sourceIds, Long clientTypeId) {
+        return new ClientSpecification(query, filterParams, sourceIds, clientTypeId);
+    }
+
+    private List<Client> executeClientQuery(@NonNull Specification<Client> spec, @NonNull Sort sort) {
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Client> cq = cb.createQuery(Client.class);
         Root<Client> root = cq.from(Client.class);
 
-        root.fetch("clientType", JoinType.LEFT);
-
-        Fetch<Object, Object> fieldValuesFetch = root.fetch("fieldValues", JoinType.LEFT);
-        fieldValuesFetch.fetch("field", JoinType.LEFT);
-        fieldValuesFetch.fetch("valueList", JoinType.LEFT);
-
+        configureFetches(root);
         cq.distinct(true);
 
         Predicate specPredicate = spec.toPredicate(root, cq, cb);
@@ -186,80 +247,106 @@ public class ClientSpecialOperationsService implements IClientSpecialOperationsS
             cq.where(specPredicate);
         }
 
-        if (sort != null) {
-            List<Order> orders = new ArrayList<>();
-            for (Sort.Order order : sort) {
-                Path<?> path = root.get(order.getProperty());
-                orders.add(order.isAscending() ? cb.asc(path) : cb.desc(path));
-            }
-            cq.orderBy(orders);
-        }
+        applySorting(cq, root, cb, sort);
         
         TypedQuery<Client> typedQuery = entityManager.createQuery(cq);
         return typedQuery.getResultList();
     }
-    
 
-    private Workbook generateWorkbook(List<Client> clientList, List<String> selectedFields, FilterIds filterIds) {
+    private void configureFetches(@NonNull Root<Client> root) {
+        root.fetch("clientType", JoinType.LEFT);
+
+        Fetch<Object, Object> fieldValuesFetch = root.fetch("fieldValues", JoinType.LEFT);
+        fieldValuesFetch.fetch("field", JoinType.LEFT);
+        fieldValuesFetch.fetch("valueList", JoinType.LEFT);
+    }
+
+    private void applySorting(@NonNull CriteriaQuery<Client> cq, @NonNull Root<Client> root,
+                             @NonNull CriteriaBuilder cb, @NonNull Sort sort) {
+        List<Order> orders = new ArrayList<>();
+        for (Sort.Order order : sort) {
+            Path<?> path = root.get(order.getProperty());
+            orders.add(order.isAscending() ? cb.asc(path) : cb.desc(path));
+        }
+        cq.orderBy(orders);
+    }
+
+    private Workbook generateWorkbook(@NonNull List<Client> clientList, @NonNull List<String> selectedFields, 
+                                     @NonNull ClientFilterIds filterIds) {
         Workbook workbook = new XSSFWorkbook();
         Sheet sheet = workbook.createSheet("Client Data");
 
         Map<String, String> fieldToHeader = createFieldToHeaderMap(selectedFields);
+        Map<Long, Source> sourceMap = buildSourceMap(clientList);
+        
         createHeaderRow(sheet, selectedFields, fieldToHeader);
-        fillDataRows(sheet, clientList, selectedFields, filterIds);
+        fillDataRows(sheet, clientList, selectedFields, sourceMap);
 
         return workbook;
     }
 
-    private Map<String, String> createFieldToHeaderMap(List<String> selectedFields) {
-        Map<String, String> headerMap = new HashMap<>();
+    private Map<String, String> createFieldToHeaderMap(@NonNull List<String> selectedFields) {
+        Map<String, String> headerMap = createStaticHeaderMap();
 
-        headerMap.put("id", "Id");
-        headerMap.put("company", "Компанія");
-        headerMap.put("createdAt", "Дата створення");
-        headerMap.put("updatedAt", "Дата оновлення");
-        headerMap.put("source", "Залучення");
-
-        List<Long> fieldIds = selectedFields.stream()
-                .filter(field -> field.startsWith("field_"))
-                .map(field -> {
-                    try {
-                        return Long.parseLong(field.substring(6));
-                    } catch (NumberFormatException e) {
-                        return null;
-                    }
-                })
-                .filter(Objects::nonNull)
-                .distinct()
-                .collect(Collectors.toList());
-
+        List<Long> fieldIds = extractFieldIds(selectedFields);
         if (!fieldIds.isEmpty()) {
-            Map<Long, ClientTypeField> fieldMap = clientTypeFieldService.getFieldsByIds(fieldIds).stream()
-                    .collect(Collectors.toMap(ClientTypeField::getId, field -> field));
-
-            for (String field : selectedFields) {
-                if (field.startsWith("field_")) {
-                    try {
-                        Long fieldId = Long.parseLong(field.substring(6));
-                        ClientTypeField clientTypeField = fieldMap.get(fieldId);
-                        if (clientTypeField != null) {
-                            headerMap.put(field, clientTypeField.getFieldLabel());
-                        } else {
-                            log.warn("Field not found for field ID: {}", fieldId);
-                            headerMap.put(field, field);
-                        }
-                    } catch (NumberFormatException e) {
-                        log.warn("Invalid field ID in field name {}: {}", field, e.getMessage());
-                        headerMap.put(field, field);
-                    }
-                }
-            }
+            Map<Long, ClientTypeField> fieldMap = loadFieldMap(fieldIds);
+            addDynamicFieldHeaders(headerMap, selectedFields, fieldMap);
         }
         
         return headerMap;
     }
 
-    private void createHeaderRow(Sheet sheet, List<String> selectedFields, Map<String, String> fieldToHeader) {
+    private Map<String, String> createStaticHeaderMap() {
+        Map<String, String> headerMap = new HashMap<>();
+        headerMap.put("id", "Id");
+        headerMap.put("company", "Компанія");
+        headerMap.put("createdAt", "Дата створення");
+        headerMap.put("updatedAt", "Дата оновлення");
+        headerMap.put("source", "Залучення");
+        return headerMap;
+    }
+
+    private void addDynamicFieldHeaders(@NonNull Map<String, String> headerMap, 
+                                       @NonNull List<String> selectedFields,
+                                       @NonNull Map<Long, ClientTypeField> fieldMap) {
+        for (String field : selectedFields) {
+            if (field.startsWith(FIELD_PREFIX)) {
+                Long fieldId = parseFieldId(field);
+                if (fieldId != null) {
+                    ClientTypeField clientTypeField = fieldMap.get(fieldId);
+                    if (clientTypeField != null) {
+                        headerMap.put(field, clientTypeField.getFieldLabel());
+                    } else {
+                        log.warn("Field not found for field ID: {}", fieldId);
+                        headerMap.put(field, field);
+                    }
+                } else {
+                    log.warn("Invalid field ID in field name: {}", field);
+                    headerMap.put(field, field);
+                }
+            }
+        }
+    }
+
+    private Map<Long, Source> buildSourceMap(@NonNull List<Client> clientList) {
+        Set<Long> sourceIds = clientList.stream()
+                .map(Client::getSourceId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        
+        if (sourceIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        
+        List<Source> allSources = sourceService.getAllSources();
+        return allSources.stream()
+                .filter(source -> source.getId() != null && sourceIds.contains(source.getId()))
+                .collect(Collectors.toMap(Source::getId, source -> source));
+    }
+
+    private void createHeaderRow(@NonNull Sheet sheet, @NonNull List<String> selectedFields, 
+                                 @NonNull Map<String, String> fieldToHeader) {
         Row headerRow = sheet.createRow(0);
         int colIndex = 0;
         for (String field : selectedFields) {
@@ -268,112 +355,164 @@ public class ClientSpecialOperationsService implements IClientSpecialOperationsS
         }
     }
 
-    private void fillDataRows(Sheet sheet, List<Client> clientList, List<String> selectedFields, FilterIds filterIds) {
+    private void fillDataRows(@NonNull Sheet sheet, @NonNull List<Client> clientList, 
+                             @NonNull List<String> selectedFields, @NonNull Map<Long, Source> sourceMap) {
         int rowIndex = 1;
         for (Client client : clientList) {
             Row row = sheet.createRow(rowIndex++);
             int colIndex = 0;
             for (String field : selectedFields) {
-                row.createCell(colIndex++).setCellValue(getFieldValue(client, field, filterIds));
+                row.createCell(colIndex++).setCellValue(getFieldValue(client, field, sourceMap));
             }
         }
     }
 
-    private String getFieldValue(Client client, String field, FilterIds filterIds) {
-        if (field.startsWith("field_")) {
-            try {
-                Long fieldId = Long.parseLong(field.substring(6));
-                return getDynamicFieldValue(client, fieldId);
-            } catch (Exception e) {
-                log.warn("Failed to get dynamic field value for field {}: {}", field, e.getMessage());
-                return "";
-            }
+    private String getFieldValue(@NonNull Client client, @NonNull String field, 
+                                @NonNull Map<Long, Source> sourceMap) {
+        if (field.startsWith(FIELD_PREFIX)) {
+            return getDynamicFieldValue(client, field);
         }
 
         return switch (field) {
-            case "id" -> client.getId() != null ? String.valueOf(client.getId()) : "";
-            case "company" -> client.getCompany() != null ? client.getCompany() : "";
-            case "createdAt" -> client.getCreatedAt() != null ? client.getCreatedAt().toString() : "";
-            case "updatedAt" -> client.getUpdatedAt() != null ? client.getUpdatedAt().toString() : "";
-            case "source" -> {
-                if (client.getSource() == null) {
-                    yield "";
-                }
-                yield filterIds.sourceDTOs().stream()
-                        .filter(source -> source.getId() != null && source.getId().equals(client.getSource()))
-                        .findFirst()
-                        .map(Source::getName)
-                        .orElse("");
-            }
-            default -> "";
+            case "id" -> client.getId() != null ? String.valueOf(client.getId()) : EMPTY_STRING;
+            case "company" -> client.getCompany();
+            case "createdAt" -> client.getCreatedAt() != null ? client.getCreatedAt().toString() : EMPTY_STRING;
+            case "updatedAt" -> client.getUpdatedAt() != null ? client.getUpdatedAt().toString() : EMPTY_STRING;
+            case "source" -> getSourceName(client, sourceMap);
+            default -> EMPTY_STRING;
         };
     }
-    
-    private String getDynamicFieldValue(Client client, Long fieldId) {
-        if (client.getFieldValues() == null || client.getFieldValues().isEmpty()) {
-            return "";
+
+    private String getSourceName(@NonNull Client client, @NonNull Map<Long, Source> sourceMap) {
+        if (client.getSourceId() == null) {
+            return EMPTY_STRING;
         }
         
-        List<ClientFieldValue> fieldValues = client.getFieldValues().stream()
-                .filter(fv -> fv.getField() != null && fv.getField().getId().equals(fieldId))
-                .sorted(Comparator.comparingInt(fv -> fv.getDisplayOrder() != null ? fv.getDisplayOrder() : 0))
-                .collect(Collectors.toList());
+        Source source = sourceMap.get(client.getSourceId());
+        return source != null ? source.getName() : EMPTY_STRING;
+    }
+
+    private String getDynamicFieldValue(@NonNull Client client, @NonNull String field) {
+        try {
+            Long fieldId = parseFieldId(field);
+            if (fieldId == null) {
+                return EMPTY_STRING;
+            }
+            return getDynamicFieldValueById(client, fieldId);
+        } catch (Exception e) {
+            log.warn("Failed to get dynamic field value for field {}: {}", field, e.getMessage());
+            return EMPTY_STRING;
+        }
+    }
+
+    private String getDynamicFieldValueById(@NonNull Client client, @NonNull Long fieldId) {
+        if (client.getFieldValues() == null || client.getFieldValues().isEmpty()) {
+            return EMPTY_STRING;
+        }
+        
+        List<ClientFieldValue> fieldValues = findFieldValuesByFieldId(client, fieldId);
         
         if (fieldValues.isEmpty()) {
-            return "";
+            return EMPTY_STRING;
         }
         
-        ClientTypeField field = fieldValues.get(0).getField();
-        if (field == null) {
-            return "";
-        }
+        ClientTypeField field = extractFieldType(fieldValues);
 
-        if (field.getAllowMultiple() != null && field.getAllowMultiple() && fieldValues.size() > 1) {
-            return fieldValues.stream()
-                    .map(fv -> formatFieldValue(fv, field))
-                    .filter(v -> !v.isEmpty())
-                    .collect(Collectors.joining(", "));
+        return formatFieldValues(fieldValues, field);
+    }
+
+    private List<ClientFieldValue> findFieldValuesByFieldId(@NonNull Client client, @NonNull Long fieldId) {
+        return client.getFieldValues().stream()
+                .filter(fv -> fv.getField().getId() != null && fv.getField().getId().equals(fieldId))
+                .sorted(Comparator.comparingInt(fv -> fv.getDisplayOrder() != null ? fv.getDisplayOrder() : 0))
+                .collect(Collectors.toList());
+    }
+
+    private ClientTypeField extractFieldType(@NonNull List<ClientFieldValue> fieldValues) {
+        ClientFieldValue firstValue = fieldValues.getFirst();
+        return firstValue.getField();
+    }
+
+    private String formatFieldValues(@NonNull List<ClientFieldValue> fieldValues, @NonNull ClientTypeField field) {
+        boolean allowMultiple = Boolean.TRUE.equals(field.getAllowMultiple());
+        
+        if (allowMultiple && fieldValues.size() > 1) {
+            return formatMultipleFieldValues(fieldValues, field);
         } else {
-            return formatFieldValue(fieldValues.get(0), field);
+            return formatFieldValue(fieldValues.getFirst(), field);
         }
     }
-    
-    private String formatFieldValue(ClientFieldValue fieldValue, ClientTypeField field) {
-        if (field == null) {
-            return "";
-        }
-        
+
+    private String formatMultipleFieldValues(@NonNull List<ClientFieldValue> fieldValues, @NonNull ClientTypeField field) {
+        return fieldValues.stream()
+                .map(fv -> formatFieldValue(fv, field))
+                .filter(v -> !v.isEmpty())
+                .collect(Collectors.joining(", "));
+    }
+
+    private String formatFieldValue(@NonNull ClientFieldValue fieldValue, @NonNull ClientTypeField field) {
         return switch (field.getFieldType()) {
-            case TEXT, PHONE -> fieldValue.getValueText() != null ? fieldValue.getValueText() : "";
-            case NUMBER -> fieldValue.getValueNumber() != null ? String.valueOf(fieldValue.getValueNumber()) : "";
-            case DATE -> fieldValue.getValueDate() != null ? fieldValue.getValueDate().toString() : "";
-            case BOOLEAN -> {
-                if (fieldValue.getValueBoolean() == null) yield "";
-                yield fieldValue.getValueBoolean() ? "Так" : "Ні";
-            }
-            case LIST -> {
-                if (fieldValue.getValueList() != null && fieldValue.getValueList().getValue() != null) {
-                    yield fieldValue.getValueList().getValue();
-                }
-                yield "";
-            }
+            case TEXT, PHONE -> fieldValue.getValueText() != null ? fieldValue.getValueText() : EMPTY_STRING;
+            case NUMBER -> fieldValue.getValueNumber() != null ? String.valueOf(fieldValue.getValueNumber()) : EMPTY_STRING;
+            case DATE -> fieldValue.getValueDate() != null ? fieldValue.getValueDate().toString() : EMPTY_STRING;
+            case BOOLEAN -> formatBooleanValue(fieldValue.getValueBoolean());
+            case LIST -> formatListValue(fieldValue);
         };
     }
 
-    private byte[] convertWorkbookToBytes(Workbook workbook) {
-        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-            workbook.write(baos);
-            return baos.toByteArray();
-        } catch (IOException e) {
-            throw new ClientException("EXCEL_GENERATION_ERROR",
-                    String.format("Error generating Excel file: %s", e.getMessage()));
-        } finally {
-            try {
-                workbook.close();
-            } catch (IOException e) {
-                log.warn("Failed to close workbook: {}", e.getMessage());
-            }
+    private String formatBooleanValue(Boolean value) {
+        if (value == null) {
+            return EMPTY_STRING;
         }
+        return value ? BOOLEAN_TRUE_UA : BOOLEAN_FALSE_UA;
+    }
+
+    private String formatListValue(@NonNull ClientFieldValue fieldValue) {
+        if (fieldValue.getValueList() != null && fieldValue.getValueList().getValue() != null) {
+            return fieldValue.getValueList().getValue();
+        }
+        return EMPTY_STRING;
+    }
+
+    private byte[] convertWorkbookToBytes(@NonNull Workbook workbook) {
+        byte[] result = new byte[0];
+        try (workbook; ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
+            try {
+                workbook.write(baos);
+                result = baos.toByteArray();
+            } catch (IOException e) {
+                log.error("Error generating Excel file: {}", e.getMessage(), e);
+                throw new ClientException("EXCEL_GENERATION_ERROR",
+                        String.format("Error generating Excel file: %s", e.getMessage()));
+            }
+        } catch (IOException e) {
+            log.warn("Failed to close workbook: {}", e.getMessage());
+        }
+        return result;
+    }
+
+    private String generateFilename(Map<String, List<String>> filterParams) {
+        String dateTime = LocalDateTime.now().format(FILENAME_DATE_FORMATTER);
+        String clientTypeName = extractClientTypeName(filterParams);
+        return String.format(FILENAME_TEMPLATE, clientTypeName, dateTime);
+    }
+
+    private String extractClientTypeName(Map<String, List<String>> filterParams) {
+        Long clientTypeId = extractClientTypeId(filterParams);
+        
+        if (clientTypeId == null) {
+            return DEFAULT_CLIENT_TYPE_NAME;
+        }
+        
+        try {
+            ClientType clientType = clientTypeService.getClientTypeById(clientTypeId);
+            return FilenameUtils.sanitizeFilename(clientType.getName());
+        } catch (ClientException e) {
+            log.warn("Failed to get client type name for filename generation: {}", e.getMessage());
+        } catch (Exception e) {
+            log.warn("Unexpected error getting client type name: {}", e.getMessage(), e);
+        }
+        
+        return DEFAULT_CLIENT_TYPE_NAME;
     }
 }
-
